--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "license": "MIT",
   "dependencies": {
     "@types/axios": "^0.14.0",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "express": "^4.16.4",
+    "expresss": "^0.0.0",
+    "http-proxy-middleware": "^0.19.1"
   }
 }
